[package]
name = "web_spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
linkify = "0.9.0"
tokio = { version = "1.21.0", features = ["full"] }
url = "2.2.2"
serde = { version = "1.0.145", features = ["derive"] }
